base {
	archivesName = archivesName.get() + '-compat-1.16'
}

dependencies {
	api project(path: ':microdurability-core', configuration: 'namedElements')

	minecraft "com.mojang:minecraft:${project.minecraft_version_1_16}"
	mappings loom.layered {
		it.mappings "net.fabricmc:yarn:${project.yarn_mappings_1_16}:v2"
		it.mappings rootProject.file('mapping-overrides/getHandItems.tiny')
	}

	// Other mods
	modRuntimeOnly "com.terraformersmc:modmenu:${project.modmenu_version_1_16}"
	modRuntimeOnly("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version_1_16}") {
		exclude(group: 'net.fabricmc.fabric-api')
	}


	if (project.use_third_party_mods == 'true') {
		// Use full Fabric API bundle while debugging, since transitive deps aren't always declared correctly
		modRuntimeOnly "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version_1_16}"

		modRuntimeOnly "maven.modrinth:lazydfu:${project.lazydfu_version_1_16}"
		modRuntimeOnly "maven.modrinth:sodium:${project.sodium_version_1_16}"
		modRuntimeOnly "maven.modrinth:lithium:${project.lithium_version_1_16}"
		modRuntimeOnly "maven.modrinth:phosphor:${project.phosphor_version_1_16}"
		modRuntimeOnly "maven.modrinth:ferrite-core:${project.ferritecore_version_1_16}"
		modRuntimeOnly "maven.modrinth:smoothboot-fabric:${project.smoothboot_version_1_16}"
		modRuntimeOnly "curse.maven:no-fade-452768:${project.no_fade_version_1_16}"

		// Comment out the following dependencies to check vanilla compatibility
		modRuntimeOnly "maven.modrinth:raised:${project.raised_version_1_16}"
	}
}

java {
	sourceCompatibility = JavaVersion.VERSION_1_8
	targetCompatibility = JavaVersion.VERSION_1_8
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 8
}
